✅ test(collector): corporate_events 백필 INSERT IGNORE 멱등성 Testcontainers 검증
SPEC-COLLECTOR-BACKFILL-007 T5 (AC-7/AC-9). Testcontainers MySQL 8.4로 종목지정
액면교체 백필 persist를 2회 실행해 유니크 키 (stock_id, event_type, event_date)
충돌이 INSERT IGNORE로 무시되어 행 수가 불변임을 검증한다(SQL 1142 미발생). smoke
회귀는 BackfillWindowExecutor가 이미 모킹되고 RevSplitCollectionService는 기존 빈이라
신규 @MockitoBean 불필요 — 무수정으로 NoSuchBean 미발생 확인.

🗿 MoAI <email@mo.ai.kr>